# MiisendU-Wii

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE.md  Makefile  README.md
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/workflows/: ci.yml
cmake/: embedded-tpl.cmake
data/: textures.scf
meta/: meta.xml
source/: application.cpp  application.h  main.cpp  pad_to_json.cpp  pad_to_json.h  udp.c  udp.cpp  udp.h  vpad_to_json.cpp  vpad_to_json.h
